test/libsolidity/syntaxTests/functionCalls/int_not_callable.sol
contract C
{
    function f ( ) public {
        ( ( 1 ( 3 ) ) , 2 );
    }
}
// ----
// TypeError 5704: (53-60): Rational number literal is not callable.
